--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@material-ui/icons": "^4.4.1",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
+    "node-gyp": "^5.0.3",
+    "node-pre-gyp": "^0.13.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-markdown": "^4.2.2",
